Added timestamp_tools crate and moved some logic out of bars crate into it.

--- a/config.toml
+++ b/config.toml
@@ -6,3 +6,8 @@ inside_bar = true
 [supported_exchanges]
 active = { kraken = true }
 
+
+[data_download]
+cache_size_units = 6 
+cache_size_period = "M" 
+
