--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ tokio = { version = "1.48.0", features = ["full"] }
 members = [
   "crates/bars",
   "crates/database_ops", 
-  "crates/indicators"
+  "crates/indicators",
+  "crates/timestamp_tools"
 ]
 
