--- a/crates/bars/Cargo.toml
+++ b/crates/bars/Cargo.toml
@@ -5,4 +5,4 @@ edition = "2024"
 
 [dependencies]
 chrono = { version = "0.4.42", features = ["clock", "std"] }
-num-traits = "0.2.19"
+timestamp_tools = { path = "../timestamp_tools" }
