--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ bars = { path = "crates/bars" }
 indicators = { path = "crates/indicators" }   
 dotenvy = "0.15.7"
 serde = { version = "1.0.228", features = ["derive"] }
+serde_json = "1.0.148"
 toml = "0.9.10"
 tokio = { version = "1.48.0", features = ["full"] }
 
