--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2024"
 database_ops = { path = "crates/database_ops" }   
 bars = { path = "crates/bars" }   
 indicators = { path = "crates/indicators" }   
+timestamp_tools = { path = "crates/timestamp_tools" }   
 dotenvy = "0.15.7"
 serde = { version = "1.0.228", features = ["derive"] }
 serde_json = "1.0.148"
