Reworked 'add_new_db_table' function to have it make an initial data fetch upon table creation, to populate the table with some initial values.

--- a/crates/database_ops/Cargo.toml
+++ b/crates/database_ops/Cargo.toml
@@ -9,3 +9,4 @@ reqwest = { version = "0.13.1", features = ["json"] }
 serde = { version = "1.0.228", features = ["derive"] }
 serde_json = "1.0.148"
 tokio = { version = "1.48.0", features = ["full"] }
+timestamp_tools = { path = "../timestamp_tools" }
