--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+app_state = { path = "crates/app_state" }   
 database_ops = { path = "crates/database_ops" }   
 bars = { path = "crates/bars" }   
 indicators = { path = "crates/indicators" }   
@@ -15,7 +16,8 @@ toml = "0.9.10"
 tokio = { version = "1.48.0", features = ["full"] }
 
 [workspace]
-members = [
+members = ["crates/app_state",
+  "crates/app_state",
   "crates/bars",
   "crates/database_ops", 
   "crates/indicators",
