--- a/crates/app_state/Cargo.toml
+++ b/crates/app_state/Cargo.toml
@@ -1,14 +1,13 @@
 [package]
-name = "database_ops"
+name = "app_state"
 version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-mysql_async = "0.36.1"
-reqwest = { version = "0.13.1", features = ["json"] }
 serde = { version = "1.0.228", features = ["derive"] }
-serde_json = "1.0.148"
-tokio = { version = "1.48.0", features = ["full"] }
+serde_json = "1.0.149"
+toml = "0.9.10"
 
 # My local modules
 timestamp_tools = { path = "../timestamp_tools" }
+database_ops = { path = "../database_ops" }
