--- a/crates/bars/Cargo.toml
+++ b/crates/bars/Cargo.toml
@@ -5,4 +5,9 @@ edition = "2024"
 
 [dependencies]
 chrono = { version = "0.4.42", features = ["clock", "std"] }
+
+# My modules
+app_state = { path = "../app_state" }
+database_ops = { path = "../database_ops" }
 timestamp_tools = { path = "../timestamp_tools" }
+
