--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,7 +20,7 @@ toml = "0.9.10"
 tokio = { version = "1.48.0", features = ["full"] }
 
 [workspace]
-members = ["crates/app_state",
+members = [
   "crates/app_state",
   "crates/bars", 
   "crates/charts",
