--- a/crates/database_ops/Cargo.toml
+++ b/crates/database_ops/Cargo.toml
@@ -4,11 +4,17 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-mysql_async = "0.36.1"
 reqwest = { version = "0.13.1", features = ["json"] }
 serde = { version = "1.0.228", features = ["derive"] }
 serde_json = "1.0.148"
 tokio = { version = "1.48.0", features = ["full"] }
+sqlx = { version = "0.7", features = [
+    "postgres",
+    "runtime-tokio",
+    "macros",
+    "chrono",
+    "bigdecimal"
+]}
 
 # My local modules
 timestamp_tools = { path = "../timestamp_tools" }
