--- a/crates/app_core/Cargo.toml
+++ b/crates/app_core/Cargo.toml
@@ -4,11 +4,13 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-tokio = { version = "1.48.0", features = ["full"] }
 dotenvy = "0.15.7"
+serde = { version = "1.0.228", features = ["derive"] }
+serde_json = "1.0.148"
+tokio = { version = "1.48.0", features = ["full"] }
+toml = "0.9.10"
 
 # My modules 
-app_state = { path = "../app_state" }
 bars = { path = "../bars" }
 charts = { path = "../charts" }
 database_ops = { path = "../database_ops" }
