--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,8 @@ tokio = { version = "1.48.0", features = ["full"] }
 
 [workspace]
 members = [
-    "crates/app_core",
+    "crates/app_core", 
+    "crates/arg_parsing",
     "crates/bars", 
     "crates/charts",
     "crates/database_ops", 
