--- a/crates/app_core/Cargo.toml
+++ b/crates/app_core/Cargo.toml
@@ -17,3 +17,4 @@ charts = { path = "../charts" }
 database_ops = { path = "../database_ops" }
 indicators = { path = "../indicators" }
 timestamp_tools = { path = "../timestamp_tools" }
+arg_parsing = { path = "../arg_parsing" }
