--- a/crates/app_core/Cargo.toml
+++ b/crates/app_core/Cargo.toml
@@ -8,6 +8,7 @@ dotenvy = "0.15.7"
 reqwest = { version = "0.13.1", features = ["json"] }
 serde = { version = "1.0.228", features = ["derive"] }
 serde_json = "1.0.148"
+sqlx = { version = "0.7", features = ["postgres"]}
 tokio = { version = "1.48.0", features = ["full"] }
 toml = "0.9.10"
 
