--- a/crates/bars/Cargo.toml
+++ b/crates/bars/Cargo.toml
@@ -5,7 +5,8 @@ edition = "2024"
 
 [dependencies]
 chrono = { version = "0.4.42", features = ["clock", "std"] }
-sqlx = { version = "0.7", features = ["postgres"]}
+num-traits = "0.2.19"
+sqlx = { version = "0.7", features = ["postgres", "bigdecimal"]}
 
 # My modules
 database_ops = { path = "../database_ops" }
