--- a/crates/timestamp_tools/Cargo.toml
+++ b/crates/timestamp_tools/Cargo.toml
@@ -4,6 +4,8 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-num-traits = "0.2.19"
 chrono = { version = "0.4.42", features = ["clock", "std"] }
+num-traits = "0.2.19"
+sqlx = { version = "0.7", features = ["bigdecimal"]}
+
 
