--- a/crates/tui/Cargo.toml
+++ b/crates/tui/Cargo.toml
@@ -1,11 +1,12 @@
 [package]
-name = "servers"
+name = "tui"
 version = "0.1.0"
 edition = "2024"
 
 [dependencies]
 tokio = { version = "1.48.0", features = ["full"] }
 
-# My modules
-app_core = { path = "../app_core" }
+# My modules 
+app_core = { path = "../app_core" }   
+ratatui = "0.30.0"
 
