--- a/crates/tui/Cargo.toml
+++ b/crates/tui/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2024"
 
 [dependencies]
 tokio = { version = "1.48.0", features = ["full"] }
+sqlx = { version = "0.8.6", features = ["postgres"] }
 
 # My modules 
 app_core = { path = "../app_core" }   
