Added new 'string_helpers' crate for simple string operations like capitalizing the first letter of a string

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,7 @@ members = [
     "crates/charts",
     "crates/database_ops", 
     "crates/indicators", 
+    "crates/string_helpers", 
     "crates/timestamp_tools", 
     "crates/tui"
 ]
