Added error checking to system settings input. It's not possible to create an invalid time period now, or to create an input value of the wrong type, such as text when an integer is expected.

--- a/crates/tui/Cargo.toml
+++ b/crates/tui/Cargo.toml
@@ -11,4 +11,5 @@ ratatui = "0.30.0"
 # My modules 
 app_core = { path = "../app_core" }   
 string_helpers = { path = "../string_helpers" }   
+timestamp_tools = { path = "../timestamp_tools" }   
 
